--- a/config/model_configs/sphere_zalesak_upwind_tracer_energy_ssp_baroclinic_wave_rhoe_equilmoist.yml
+++ b/config/model_configs/sphere_zalesak_upwind_tracer_energy_ssp_baroclinic_wave_rhoe_equilmoist.yml
@@ -1,6 +1,6 @@
 dt_save_to_disk: "5days"
 initial_condition: "MoistBaroclinicWave"
-max_newton_iters: 4
+max_newton_iters_ode: 4
 dt: "500secs"
 tracer_upwinding: zalesak
 t_end: "5days"
