--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -632,6 +632,14 @@ steps:
         artifact_paths: "diagnostic_edmfx_bomex_box/*"
         agents:
           slurm_mem: 20GB
+      
+      - label: ":genie: Diagnostic EDMFX Bomex stretched grid in a box"
+        command: >
+          julia --color=yes --project=examples examples/hybrid/driver.jl
+          --config_file ${CONFIG_PATH}diagnostic_edmfx_bomex_stretched_box.yml
+        artifact_paths: "diagnostic_edmfx_bomex_stretched_box/*"
+        agents:
+          slurm_mem: 20GB
 
       - label: ":genie: Diagnostic EDMFX DYCOMS_RF01 in a box"
         command: >
@@ -648,22 +656,12 @@ steps:
         artifact_paths: "diagnostic_edmfx_rico_box/*"
         agents:
           slurm_mem: 20GB
-      
-      - label: ":genie: Diagnostic EDMFX aquaplanet"
-        command: >
-          julia --color=yes --project=examples examples/hybrid/driver.jl
-          --config_file ${CONFIG_PATH}diagnostic_edmfx_aquaplanet.yml
-        artifact_paths: "diagnostic_edmfx_aquaplanet/*"
-        soft_fail: true
-        agents:
-          slurm_mem: 20GB
 
       - label: ":genie: Diagnostic EDMFX aquaplanet with TKE"
         command: >
           julia --color=yes --project=examples examples/hybrid/driver.jl
           --config_file ${CONFIG_PATH}diagnostic_edmfx_aquaplanet_tke.yml
         artifact_paths: "diagnostic_edmfx_aquaplanet_tke/*"
-        soft_fail: true
         agents:
           slurm_mem: 20GB
 
