--- a/config/model_configs/diagnostic_edmfx_dycoms_rf01_box.yml
+++ b/config/model_configs/diagnostic_edmfx_dycoms_rf01_box.yml
@@ -10,6 +10,7 @@ edmfx_upwinding: first_order
 edmfx_entr_detr: true 
 edmfx_sgs_flux: true
 moist: equil
+apply_limiter: false
 config: box 
 hyperdiff: "true" 
 kappa_4: 1e12
