--- a/config/model_configs/diagnostic_edmfx_rico_box.yml
+++ b/config/model_configs/diagnostic_edmfx_rico_box.yml
@@ -10,6 +10,8 @@ edmfx_upwinding: first_order
 edmfx_entr_detr: true 
 edmfx_sgs_flux: true
 moist: equil
+apply_limiter: false
+precip_model: "0M" 
 config: box 
 hyperdiff: "true"
 kappa_4: 1e12
