--- a/config/longrun_configs/longrun_zalesak_tracer_energy_hs_rhoe_equil_highres.yml
+++ b/config/longrun_configs/longrun_zalesak_tracer_energy_hs_rhoe_equil_highres.yml
@@ -12,3 +12,4 @@ energy_upwinding: zalesak
 precip_model: "0M"
 job_id: "longrun_zalesak_tracer_energy_hs_rhoe_equil_highres"
 moist: "equil"
+apply_limiter: true
