--- a/config/model_configs/sphere_ssp_first_tracer_energy_upwind_held_suarez_rhoe_equilmoist_hightop_sponge.yml
+++ b/config/model_configs/sphere_ssp_first_tracer_energy_upwind_held_suarez_rhoe_equilmoist_hightop_sponge.yml
@@ -17,3 +17,4 @@ alpha_rayleigh_uh: 0.0
 viscous_sponge: true
 job_id: "sphere_ssp_first_tracer_energy_upwind_held_suarez_rhoe_equilmoist_hightop_sponge"
 moist: "equil"
+apply_limiter: true
