--- a/config/perf_configs/flame/perf_target_edmf.yml
+++ b/config/perf_configs/flame/perf_target_edmf.yml
@@ -2,3 +2,4 @@ job_id: "flame_perf_target_edmf"
 precip_model: "nothing"
 target_job: "sphere_baroclinic_wave_rhoe_equilmoist_edmf"
 rad: "nothing"
+apply_limiter: false
