Clean up compat entries: remove duplicate in subdirs

--- a/Project.toml
+++ b/Project.toml
@@ -52,7 +52,7 @@ ArgParse = "1"
 ArtifactWrappers = "0.2"
 AtmosphericProfilesLibrary = "0.1"
 CLIMAParameters = "0.7"
-CUDA = "3, 4"
+CUDA = "4"
 ClimaComms = "0.5"
 ClimaCore = "0.10"
 ClimaTimeSteppers = "0.7"
@@ -73,6 +73,7 @@ LambertW = "0.4"
 NCDatasets = "0.11, 0.12"
 NVTX = "0.3"
 OrdinaryDiffEq = "5, 6"
+Pkg = "1.8"
 RRTMGP = "0.9"
 RootSolvers = "0.2, 0.3"
 StaticArrays = "1"
