--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -15,5 +15,8 @@ TerminalLoggers = "5d786b92-1e48-4d6f-9151-6b4477ca9bed"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 
 [compat]
-CUDA = "4"
-DiffEqBase = "6"
+Documenter = "0.27"
+DocumenterCitations = "1"
+OrderedCollections = "1.6"
+PrettyTables = "2"
+TOML = "1"
