--- a/perf/Project.toml
+++ b/perf/Project.toml
@@ -70,34 +70,32 @@ URIs = "5c2747f8-b7ea-4ff2-ba2e-563bfd36b1d4"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 
 [compat]
-ArgParse = "1"
-ArtifactWrappers = "0.2"
-AtmosphericProfilesLibrary = "0.1"
-CLIMAParameters = "0.7"
-CUDA = "4"
-ClimaCore = "0.10"
-ClimaTimeSteppers = "0.7"
-Dierckx = "0.5"
-DiffEqBase = "6"
-Distributions = "0.25"
-DocStringExtensions = "0.8, 0.9"
-FastGaussQuadrature = "0.4, 0.5"
+BenchmarkTools = "1"
+BlockArrays = "0.16"
+CairoMakie = "0.10"
+ClimaCoreMakie = "0.4"
+ClimaCorePlots = "0.2"
+ClimaCoreSpectra = "0.1"
+ClimaCoreTempestRemap = "0.3"
+ClimaCoreVTK = "0.7"
+DiffEqNoiseProcess = "5"
+ForwardDiff = "0.10"
 Glob = "1"
+JET = "0.7"
 JSON = "0.21"
-LambertW = "0.4"
-NCDatasets = "0.11, 0.12"
 OrderedCollections = "1"
-OrdinaryDiffEq = "5, 6"
+PProf = "2"
+Plots = "1"
 PoissonRandom = "0.4"
 PrettyTables = "1, 2"
-RRTMGP = "0.9"
-RootSolvers = "0.2, 0.3"
+ProfileCanvas = "0.1"
+ProgressLogging = "0.1"
+QuadGK = "2"
+ReportMetrics = "0.2"
 SciMLBase = "1"
-StaticArrays = "1"
-StatsBase = "0.33"
-SurfaceFluxes = "0.6"
-TerminalLoggers = "0.1"
-Thermodynamics = "0.10"
+SnoopCompileCore = "2"
+TOML = "1"
+URIs = "1"
 julia = "1.7"
 
 [extras]
