--- a/test/Project.toml
+++ b/test/Project.toml
@@ -69,49 +69,30 @@ Thermodynamics = "b60c26fb-14c3-4610-9d3e-2d17fe7ff00c"
 YAML = "ddb6d928-2868-570f-bddf-ab3f9cf99eb6"
 
 [compat]
-ArgParse = "1"
-ArtifactWrappers = "0.2"
-AtmosphericProfilesLibrary = "0.1"
+Aqua = "0.6"
 BlockArrays = "0.16"
-CLIMAParameters = "0.7"
-CUDA = "4"
-ClimaComms = "0.5"
-ClimaCore = "0.10"
+CairoMakie = "0.10"
+ClimaCoreMakie = "0.4"
 ClimaCorePlots = "0.2"
-ClimaCoreVTK = "0.6, 0.7"
-ClimaTimeSteppers = "0.7"
-CloudMicrophysics = "0.10"
+ClimaCoreSpectra = "0.1"
+ClimaCoreTempestRemap = "0.3"
+ClimaCoreVTK = "0.7"
 Dierckx = "0.5"
-DiffEqBase = "6"
-DiffEqCallbacks = "2"
-DiffEqNoiseProcess = "5.9"
-Distributions = "0.25"
-DocStringExtensions = "0.8, 0.9"
-FastGaussQuadrature = "0.4, 0.5"
+DiffEqNoiseProcess = "5"
 ForwardDiff = "0.10"
 Glob = "1"
-Insolation = "0.6"
-IntervalSets = "0.5, 0.6, 0.7"
-JLD2 = "0.4"
 JSON = "0.21"
-LambertW = "0.4"
-NCDatasets = "0.11, 0.12"
 NCRegressionTests = "0.2"
 OrderedCollections = "1"
-OrdinaryDiffEq = "5, 6"
 Plots = "1"
 PoissonRandom = "0.4"
 PrettyTables = "1, 2"
 ProgressLogging = "0.1"
 QuadGK = "2"
-RRTMGP = "0.9"
 ReportMetrics = "0.2"
-RootSolvers = "0.2, 0.3"
-StaticArrays = "1"
-StatsBase = "0.33"
-SurfaceFluxes = "0.6"
-TerminalLoggers = "0.1"
-Thermodynamics = "0.10"
+SafeTestsets = "0.1"
+SciMLBase = "1"
+TOML = "1"
 
 [extras]
 CPUSummary = "2a0fbf3d-bb9c-48f3-b0a9-814d99fd7ab9"
