--- a/.buildkite/longruns/pipeline.yml
+++ b/.buildkite/longruns/pipeline.yml
@@ -46,7 +46,10 @@ steps:
 
       - label: ":computer: baroclinic wave (ρe_tot) high resolution"
         command:
-          - mpiexec julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_bw_rhoe_highres.yml
+          - ": > print-out-0.log" 
+          - tail -F print-out-0.log & # print log in background
+          - srun --output=print-out-%t.log <executable> julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_bw_rhoe_highres.yml
+          - sleep 1
           - julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl --data_dir longrun_bw_rhoe_highres --out_dir longrun_bw_rhoe_highres
           - julia --color=yes --project=examples post_processing/plot/plot_pipeline.jl --nc_dir longrun_bw_rhoe_highres --fig_dir longrun_bw_rhoe_highres --case_name dry_baroclinic_wave
         artifact_paths: "longrun_bw_rhoe_highres/*"
@@ -57,7 +60,10 @@ steps:
 
       - label: ":computer: no lim ARS baroclinic wave (ρe_tot) equilmoist high resolution"
         command:
-          - mpiexec julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_bw_rhoe_equil_highres.yml
+          - ": > print-out-0.log" 
+          - tail -F print-out-0.log & # print log in background
+          - srun --output=print-out-%t.log <executable> julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_bw_rhoe_equil_highres.yml
+          - sleep 1
           - julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl --data_dir longrun_bw_rhoe_equil_highres --out_dir longrun_bw_rhoe_equil_highres
           - julia --color=yes --project=examples post_processing/plot/plot_pipeline.jl --nc_dir longrun_bw_rhoe_equil_highres --fig_dir longrun_bw_rhoe_equil_highres --case_name moist_baroclinic_wave
         artifact_paths: "longrun_bw_rhoe_equil_highres/*"
@@ -68,7 +74,10 @@ steps:
 
       - label: ":computer: lim ARS zalesak baroclinic wave (ρe_tot) equilmoist high resolution"
         command:
-          - mpiexec julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_zalesak_tracer_energy_bw_rhoe_equil_highres.yml
+          - ": > print-out-0.log" 
+          - tail -F print-out-0.log & # print log in background
+          - srun --output=print-out-%t.log <executable> julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_zalesak_tracer_energy_bw_rhoe_equil_highres.yml
+          - sleep 1
           - julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl --data_dir longrun_zalesak_tracer_energy_bw_rhoe_equil_highres --out_dir longrun_zalesak_tracer_energy_bw_rhoe_equil_highres
           - julia --color=yes --project=examples post_processing/plot/plot_pipeline.jl --nc_dir longrun_zalesak_tracer_energy_bw_rhoe_equil_highres --fig_dir longrun_zalesak_tracer_energy_bw_rhoe_equil_highres --case_name moist_baroclinic_wave
         artifact_paths: "longrun_zalesak_tracer_energy_bw_rhoe_equil_highres/*"
@@ -91,7 +100,10 @@ steps:
 
       - label: ":computer: SSP 1st-order tracer & energy upwind equilmoist baroclinic wave (ρe_tot) high resolution"
         command:
-          - mpiexec julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_ssp_first_tracer_energy_upwind_bw_rhoe_equil_highres.yml
+          - ": > print-out-0.log" 
+          - tail -F print-out-0.log & # print log in background
+          - srun --output=print-out-%t.log <executable> julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_ssp_first_tracer_energy_upwind_bw_rhoe_equil_highres.yml
+          - sleep 1
           - julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl --data_dir longrun_ssp_first_tracer_energy_upwind_bw_rhoe_equil_highres --out_dir longrun_ssp_first_tracer_energy_upwind_bw_rhoe_equil_highres
           - julia --color=yes --project=examples post_processing/plot/plot_pipeline.jl --nc_dir longrun_ssp_first_tracer_energy_upwind_bw_rhoe_equil_highres --fig_dir longrun_ssp_first_tracer_energy_upwind_bw_rhoe_equil_highres --case_name moist_baroclinic_wave
         artifact_paths: "longrun_ssp_first_tracer_energy_upwind_bw_rhoe_equil_highres/*"
@@ -102,7 +114,10 @@ steps:
 
       - label: ":computer: SSP 3rd-order tracer & energy upwind equilmoist baroclinic wave (ρe_tot) high resolution"
         command:
-          - mpiexec julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_ssp_third_tracer_energy_upwind_bw_rhoe_equil_highres.yml
+          - ": > print-out-0.log" 
+          - tail -F print-out-0.log & # print log in background
+          - srun --output=print-out-%t.log <executable> julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_ssp_third_tracer_energy_upwind_bw_rhoe_equil_highres.yml
+          - sleep 1
           - julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl --data_dir longrun_ssp_third_tracer_energy_upwind_bw_rhoe_equil_highres --out_dir longrun_ssp_third_tracer_energy_upwind_bw_rhoe_equil_highres
           - julia --color=yes --project=examples post_processing/plot/plot_pipeline.jl --nc_dir longrun_ssp_third_tracer_energy_upwind_bw_rhoe_equil_highres --fig_dir longrun_ssp_third_tracer_energy_upwind_bw_rhoe_equil_highres --case_name moist_baroclinic_wave
         artifact_paths: "longrun_ssp_third_tracer_energy_upwind_bw_rhoe_equil_highres/*"
@@ -113,7 +128,10 @@ steps:
 
       - label: ":computer: held suarez (ρe_tot) high resolution hightop"
         command:
-          - mpiexec julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_hs_rhoe_highres_hightop.yml
+          - ": > print-out-0.log" 
+          - tail -F print-out-0.log & # print log in background
+          - srun --output=print-out-%t.log <executable> julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_hs_rhoe_highres_hightop.yml
+          - sleep 1
           - julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl --data_dir longrun_hs_rhoe_highres_hightop --out_dir longrun_hs_rhoe_highres_hightop
           - julia --color=yes --project=examples post_processing/plot/plot_pipeline.jl --nc_dir longrun_hs_rhoe_highres_hightop --fig_dir longrun_hs_rhoe_highres_hightop --case_name dry_held_suarez
         artifact_paths: "longrun_hs_rhoe_highres_hightop/*"
@@ -124,7 +142,10 @@ steps:
 
       - label: ":computer: no lim ARS held suarez (ρe_tot) equilmoist high resolution"
         command:
-          - mpiexec julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_hs_rhoe_equil_highres.yml
+          - ": > print-out-0.log" 
+          - tail -F print-out-0.log & # print log in background
+          - srun --output=print-out-%t.log <executable> julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_hs_rhoe_equil_highres.yml
+          - sleep 1
           - julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl --data_dir longrun_hs_rhoe_equil_highres --out_dir longrun_hs_rhoe_equil_highres
           - julia --color=yes --project=examples post_processing/plot/plot_pipeline.jl --nc_dir longrun_hs_rhoe_equil_highres --fig_dir longrun_hs_rhoe_equil_highres --case_name moist_held_suarez
         artifact_paths: "longrun_hs_rhoe_equil_highres/*"
@@ -135,7 +156,10 @@ steps:
 
       - label: ":computer: lim ARS zalesak held suarez (ρe_tot) equilmoist high resolution"
         command:
-          - mpiexec julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_zalesak_tracer_energy_hs_rhoe_equil_highres.yml
+          - ": > print-out-0.log" 
+          - tail -F print-out-0.log & # print log in background
+          - srun --output=print-out-%t.log <executable> julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_zalesak_tracer_energy_hs_rhoe_equil_highres.yml
+          - sleep 1
           - julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl --data_dir longrun_zalesak_tracer_energy_hs_rhoe_equil_highres --out_dir longrun_zalesak_tracer_energy_hs_rhoe_equil_highres
           - julia --color=yes --project=examples post_processing/plot/plot_pipeline.jl --nc_dir longrun_zalesak_tracer_energy_hs_rhoe_equil_highres --fig_dir longrun_zalesak_tracer_energy_hs_rhoe_equil_highres --case_name moist_held_suarez
         artifact_paths: "longrun_zalesak_tracer_energy_hs_rhoe_equil_highres/*"
@@ -147,7 +171,10 @@ steps:
 
       - label: ":computer: no lim ARS aquaplanet (ρe_tot) equilmoist high resolution clearsky radiation Float64"
         command:
-          - mpiexec julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_aquaplanet_rhoe_equil_highres_clearsky_ft64.yml
+          - ": > print-out-0.log" 
+          - tail -F print-out-0.log & # print log in background
+          - srun --output=print-out-%t.log <executable> julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_aquaplanet_rhoe_equil_highres_clearsky_ft64.yml
+          - sleep 1
           - julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl --data_dir longrun_aquaplanet_rhoe_equil_highres_clearsky_ft64 --out_dir longrun_aquaplanet_rhoe_equil_highres_clearsky_ft64
           - julia --color=yes --project=examples post_processing/plot/plot_pipeline.jl --nc_dir longrun_aquaplanet_rhoe_equil_highres_clearsky_ft64 --fig_dir longrun_aquaplanet_rhoe_equil_highres_clearsky_ft64 --case_name aquaplanet
         artifact_paths: "longrun_aquaplanet_rhoe_equil_highres_clearsky_ft64/*"
@@ -158,7 +185,10 @@ steps:
 
       - label: ":computer: lim ARS zalesak aquaplanet (ρe_tot) equilmoist high resolution clearsky radiation Float64"
         command:
-          - mpiexec julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_zalesak_tracer_energy_aquaplanet_rhoe_equil_highres_clearsky_ft64.yml
+          - ": > print-out-0.log" 
+          - tail -F print-out-0.log & # print log in background
+          - srun --output=print-out-%t.log <executable> julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_zalesak_tracer_energy_aquaplanet_rhoe_equil_highres_clearsky_ft64.yml
+          - sleep 1
           - julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl --data_dir longrun_zalesak_tracer_energy_aquaplanet_rhoe_equil_highres_clearsky_ft64 --out_dir longrun_zalesak_tracer_energy_aquaplanet_rhoe_equil_highres_clearsky_ft64
           - julia --color=yes --project=examples post_processing/plot/plot_pipeline.jl --nc_dir longrun_zalesak_tracer_energy_aquaplanet_rhoe_equil_highres_clearsky_ft64 --fig_dir longrun_zalesak_tracer_energy_aquaplanet_rhoe_equil_highres_clearsky_ft64 --case_name aquaplanet
         artifact_paths: "longrun_zalesak_tracer_energy_aquaplanet_rhoe_equil_highres_clearsky_ft64/*"
@@ -170,7 +200,10 @@ steps:
 
       - label: ":computer: held suarez (ρe_tot) equilmoist high resolution hightop rayleigh sponge(30e3, 10)"
         command:
-          - mpiexec julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_hs_rhoe_equilmoist_highres_hightop_rayleigh30e3.yml
+          - ": > print-out-0.log" 
+          - tail -F print-out-0.log & # print log in background
+          - srun --output=print-out-%t.log <executable> julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_hs_rhoe_equilmoist_highres_hightop_rayleigh30e3.yml
+          - sleep 1
           - julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl --data_dir longrun_hs_rhoe_equilmoist_highres_hightop_rayleigh30e3 --out_dir longrun_hs_rhoe_equilmoist_highres_hightop_rayleigh30e3
           - julia --color=yes --project=examples post_processing/plot/plot_pipeline.jl --nc_dir longrun_hs_rhoe_equilmoist_highres_hightop_rayleigh30e3 --fig_dir longrun_hs_rhoe_equilmoist_highres_hightop_rayleigh30e3 --case_name aquaplanet
         artifact_paths: "longrun_hs_rhoe_equilmoist_highres_hightop_rayleigh30e3/*"
@@ -181,7 +214,10 @@ steps:
 
       - label: ":computer: aquaplanet (ρe_tot) equilmoist clearsky high resolution hightop rayleigh sponge(35e3, 10) Float64"
         command:
-          - mpiexec julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_aquaplanet_rhoe_equilmoist_clearsky_highres_hightop_rayleigh35e3_ft64.yml
+          - ": > print-out-0.log" 
+          - tail -F print-out-0.log & # print log in background
+          - srun --output=print-out-%t.log <executable> julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_aquaplanet_rhoe_equilmoist_clearsky_highres_hightop_rayleigh35e3_ft64.yml
+          - sleep 1
           - julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl --data_dir longrun_aquaplanet_rhoe_equil_clearsky_highres_hightop_rayleigh35e3_float64 --out_dir longrun_aquaplanet_rhoe_equil_clearsky_highres_hightop_rayleigh35e3_float64
           - julia --color=yes --project=examples post_processing/plot/plot_pipeline.jl --nc_dir longrun_aquaplanet_rhoe_equil_clearsky_highres_hightop_rayleigh35e3_float64 --fig_dir longrun_aquaplanet_rhoe_equil_clearsky_highres_hightop_rayleigh35e3_float64 --case_name aquaplanet
         artifact_paths: "longrun_aquaplanet_rhoe_equil_clearsky_highres_hightop_rayleigh35e3_float64/*"
@@ -192,7 +228,10 @@ steps:
       
       - label: ":computer: baroclinic wave (ρe_tot) equilmoist high resolution topography (earth)"
         command:
-          - mpiexec julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_bw_rhoe_equil_highres_topography_earth.yml
+          - ": > print-out-0.log" 
+          - tail -F print-out-0.log & # print log in background
+          - srun --output=print-out-%t.log <executable> julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_bw_rhoe_equil_highres_topography_earth.yml
+          - sleep 1
           - julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl --data_dir longrun_bw_rhoe_equil_highres_topography_earth --out_dir longrun_bw_rhoe_equil_highres_topography_earth
         artifact_paths: "longrun_bw_rhoe_equil_highres_topography (earth)/*"
         env:
@@ -203,7 +242,10 @@ steps:
 
       - label: ":computer: held suarez (ρe_tot) equilmoist high resolution topography (earth)"
         command:
-          - mpiexec julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_hs_rhoe_equil_highres_topography_earth.yml
+          - ": > print-out-0.log" 
+          - tail -F print-out-0.log & # print log in background
+          - srun --output=print-out-%t.log <executable> julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_hs_rhoe_equil_highres_topography_earth.yml
+          - sleep 1
           - julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl --data_dir longrun_hs_rhoe_equil_highres_topography_earth --out_dir longrun_hs_rhoe_equil_highres_topography_earth
         artifact_paths: "longrun_hs_rhoe_equil_highres_topography_earth/*"
         env:
@@ -214,7 +256,10 @@ steps:
 
       - label: ":computer: no lim ARS aquaplanet (ρe_tot) equilmoist high resolution clearsky radiation Float64 (earth)"
         command:
-          - mpiexec julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_aquaplanet_rhoe_equil_highres_clearsky_ft64_earth.yml
+          - ": > print-out-0.log" 
+          - tail -F print-out-0.log & # print log in background
+          - srun --output=print-out-%t.log <executable> julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_aquaplanet_rhoe_equil_highres_clearsky_ft64_earth.yml
+          - sleep 1
           - julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl --data_dir longrun_aquaplanet_rhoe_equil_highres_clearsky_ft64_earth --out_dir longrun_aquaplanet_rhoe_equil_highres_clearsky_ft64_earth
           - julia --color=yes --project=examples post_processing/plot/plot_pipeline.jl --nc_dir longrun_aquaplanet_rhoe_equil_highres_clearsky_ft64_earth --fig_dir longrun_aquaplanet_rhoe_equil_highres_clearsky_ft64_earth --case_name aquaplanet
         artifact_paths: "longrun_aquaplanet_rhoe_equil_highres_clearsky_ft64_earth/*"
@@ -253,7 +298,10 @@ steps:
 
       - label: ":computer: held suarez (ρe_tot) equilmoist high resolution monin obukhov"
         command:
-          - mpiexec julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_hs_rhoe_equil_highres_monin_obukhov.yml
+          - ": > print-out-0.log" 
+          - tail -F print-out-0.log & # print log in background
+          - srun --output=print-out-%t.log <executable> julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_hs_rhoe_equil_highres_monin_obukhov.yml
+          - sleep 1
           - julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl --data_dir longrun_hs_rhoe_equil_highres_monin_obukhov --out_dir longrun_hs_rhoe_equil_highres_monin_obukhov
           - julia --color=yes --project=examples post_processing/plot/plot_pipeline.jl --nc_dir longrun_hs_rhoe_equil_highres_monin_obukhov --fig_dir longrun_hs_rhoe_equil_highres_monin_obukhov --case_name moist_held_suarez
         artifact_paths: "longrun_hs_rhoe_equil_highres_monin_obukhov/*"
@@ -264,7 +312,10 @@ steps:
 
       - label: ":computer: aquaplanet (ρe_tot) equilmoist high resolution allsky radiation float64"
         command:
-          - mpiexec julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_aquaplanet_rhoe_equil_highres_allsky_ft64.yml
+          - ": > print-out-0.log" 
+          - tail -F print-out-0.log & # print log in background
+          - srun --output=print-out-%t.log <executable> julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_aquaplanet_rhoe_equil_highres_allsky_ft64.yml
+          - sleep 1
           - julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl --data_dir longrun_aquaplanet_rhoe_equil_highres_allsky_ft64 --out_dir longrun_aquaplanet_rhoe_equil_highres_allsky_ft64
         artifact_paths: "longrun_aquaplanet_rhoe_equil_highres_allsky_ft64/*"
         env:
