--- a/config/default_configs/default_config.yml
+++ b/config/default_configs/default_config.yml
@@ -153,6 +153,9 @@ dt_save_restart:
 dt_save_to_sol:
   help: "Time between saving solution. Examples: [`10days`, `1hours`, `Inf` (do not save)]"
   value: "1days"
+dt_show_progress:
+  help: "Time between displaying progress update"
+  value: "600secs"
 moist:
   help: "Moisture model [`dry` (default), `equil`, `non_equil`]"
   value: "dry"
