new file:   longrun_aquaplanet_rhoe_equil_gray_55km_nz63_0M.yml 	modified:   .buildkite/longruns/pipeline.yml

--- a/.buildkite/longruns/pipeline.yml
+++ b/.buildkite/longruns/pipeline.yml
@@ -283,6 +283,15 @@ steps:
           CLIMACORE_DISTRIBUTED: "MPI"
         agents:
           slurm_ntasks: 64
+      
+      - label: ":computer: aquaplanet, equilmoist, high-topped (55km), gray-radiation, vertdiff, high-sponge(35km), helem_16 np_3"
+          - srun julia --project=examples examples/hybrid/driver.jl --config_file $CONFIG_PATH/longrun_aquaplanet_rhoe_equil_gray_55km_nz63_0M.yml
+          - julia --color=yes --project=examples post_processing/remap/remap_pipeline.jl --data_dir longrun_aquaplanet_rhoe_equil_gray_55km_nz63_0M.yml --out_dir longrun_aquaplanet_rhoe_equil_gray_55km_nz63_0M.yml
+        artifact_paths: "longrun_aquaplanet_rhoe_equil_gray_55km_nz63_0M.yml/*"
+        env:
+          CLIMACORE_DISTRIBUTED: "MPI"
+        agents:
+          slurm_ntasks: 64
 
   - group: "TurbulenceConvection"
     steps:
