Remove overrides, centralize param struct creation

--- a/config/default_configs/default_config.yml
+++ b/config/default_configs/default_config.yml
@@ -243,3 +243,6 @@ prognostic_tke:
 prognostic_surface:
   help: "Determines if surface temperature is prognostic [`false` (default), , `true`, `PrognosticSurfaceTemperature`, `PrescribedSurfaceTemperature`]"
   value: "false"
+override_τ_precip:
+  help: "If true, sets τ_precip to dt. Otherwise, τ_precip is set to the value in the toml dictionary"
+  value: true
